grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COLON
    CORDER
    CORIZQ
    OR
    continue
    for
    global
    in
    local

Grammar

Rule 0     S' -> init
Rule 1     init -> scripts
Rule 2     init -> empty
Rule 3     empty -> <empty>
Rule 4     scripts -> scripts script
Rule 5     scripts -> script
Rule 6     script -> function SEMICOLON
Rule 7     script -> instruccion
Rule 8     function -> FUNCION ID PARIZQ PARDER instrucciones FIN
Rule 9     function -> FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
Rule 10    PARAMETROS -> PARAMETROS COMMA PARAMETRO
Rule 11    PARAMETROS -> PARAMETRO
Rule 12    PARAMETRO -> expresion
Rule 13    PARAMETROSTIPO -> PARAMETROSTIPO COMMA PARAMETROTIPO
Rule 14    PARAMETROSTIPO -> PARAMETROTIPO
Rule 15    PARAMETROTIPO -> ID TIPOVAR TIPO
Rule 16    PARAMETROTIPO -> ID TIPOVAR ID
Rule 17    PARAMETROTIPO -> ID
Rule 18    instrucciones -> instrucciones instruccion
Rule 19    instrucciones -> instruccion
Rule 20    instruccion -> imprimir SEMICOLON
Rule 21    instruccion -> call SEMICOLON
Rule 22    instruccion -> STRUCTS SEMICOLON
Rule 23    instruccion -> IF SEMICOLON
Rule 24    instruccion -> WHILE SEMICOLON
Rule 25    instruccion -> BREAK SEMICOLON
Rule 26    instruccion -> RETURN SEMICOLON
Rule 27    instruccion -> DECLARACION SEMICOLON
Rule 28    STRUCTS -> MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
Rule 29    STRUCTS -> MUTABLE STRUCT ID FIN
Rule 30    STRUCTS -> STRUCT ID ATIBUTOSSTRUCT FIN
Rule 31    STRUCTS -> STRUCT ID FIN
Rule 32    ATIBUTOSSTRUCT -> ATIBUTOSSTRUCT ATRIBUTOSTRUCT SEMICOLON
Rule 33    ATIBUTOSSTRUCT -> ATRIBUTOSTRUCT SEMICOLON
Rule 34    ATRIBUTOSTRUCT -> ID TIPOVAR TIPO
Rule 35    ATRIBUTOSTRUCT -> ID TIPOVAR ID
Rule 36    ATRIBUTOSTRUCT -> ID
Rule 37    STRUCTGETS -> STRUCTGETS DOT STRUCTGET
Rule 38    STRUCTGETS -> STRUCTGET
Rule 39    STRUCTGET -> ID
Rule 40    IF -> if expresion instrucciones FIN
Rule 41    IF -> if expresion instrucciones else instrucciones FIN
Rule 42    IF -> if expresion instrucciones LIST_ELSEIF
Rule 43    LIST_ELSEIF -> LIST_ELSEIF ELSEIF
Rule 44    LIST_ELSEIF -> ELSEIF
Rule 45    ELSEIF -> elseif expresion instrucciones FIN
Rule 46    ELSEIF -> elseif expresion instrucciones else instrucciones FIN
Rule 47    ELSEIF -> elseif expresion instrucciones LIST_ELSEIF
Rule 48    WHILE -> while expresion instrucciones FIN
Rule 49    RETURN -> return expresion
Rule 50    BREAK -> break
Rule 51    DECLARACION -> ID IGUAL expresion
Rule 52    DECLARACION -> STRUCTGETS IGUAL expresion
Rule 53    imprimir -> PRINTLN PARIZQ PARAMETROS PARDER
Rule 54    imprimir -> PRINT PARIZQ PARAMETROS PARDER
Rule 55    expresion -> expresion MAS expresion
Rule 56    expresion -> expresion MENOS expresion
Rule 57    expresion -> expresion POR expresion
Rule 58    expresion -> expresion DIVIDIDO expresion
Rule 59    expresion -> expresion POTENCIA expresion
Rule 60    expresion -> expresion MODULO expresion
Rule 61    expresion -> expresion DOT expresion
Rule 62    expresion -> expresion IGUALIGUAL expresion
Rule 63    expresion -> expresion MAYORQ expresion
Rule 64    expresion -> expresion MENORQ expresion
Rule 65    expresion -> expresion MAYORIQ expresion
Rule 66    expresion -> expresion MENORIQ expresion
Rule 67    expresion -> expresion DIFERENTE expresion
Rule 68    expresion -> PARIZQ expresion PARDER
Rule 69    call -> ID PARIZQ PARDER
Rule 70    call -> ID NOT PARIZQ PARDER
Rule 71    call -> ID PARIZQ PARAMETROS PARDER
Rule 72    call -> ID NOT PARIZQ PARAMETROS PARDER
Rule 73    expresion -> call
Rule 74    expresion -> ENTERO
Rule 75    expresion -> DECIMAL
Rule 76    expresion -> CADENA
Rule 77    expresion -> CHARACTER
Rule 78    expresion -> ID
Rule 79    expresion -> TRUE
Rule 80    expresion -> FALSE
Rule 81    expresion -> NULO
Rule 82    expresion -> TIPO
Rule 83    TIPO -> INT64
Rule 84    TIPO -> FLOAT64
Rule 85    TIPO -> BOOL
Rule 86    TIPO -> CHAR
Rule 87    TIPO -> ID
Rule 88    TIPO -> STRING

Terminals, with rules where they appear

AND                  : 
BOOL                 : 85
CADENA               : 76
CHAR                 : 86
CHARACTER            : 77
COLON                : 
COMMA                : 10 13
CORDER               : 
CORIZQ               : 
DECIMAL              : 75
DIFERENTE            : 67
DIVIDIDO             : 58
DOT                  : 37 61
ENTERO               : 74
FALSE                : 80
FIN                  : 8 9 28 29 30 31 40 41 45 46 48
FLOAT64              : 84
FUNCION              : 8 9
ID                   : 8 9 15 16 16 17 28 29 30 31 34 35 35 36 39 51 69 70 71 72 78 87
IGUAL                : 51 52
IGUALIGUAL           : 62
INT64                : 83
MAS                  : 55
MAYORIQ              : 65
MAYORQ               : 63
MENORIQ              : 66
MENORQ               : 64
MENOS                : 56
MODULO               : 60
MUTABLE              : 28 29
NOT                  : 70 72
NULO                 : 81
OR                   : 
PARDER               : 8 9 53 54 68 69 70 71 72
PARIZQ               : 8 9 53 54 68 69 70 71 72
POR                  : 57
POTENCIA             : 59
PRINT                : 54
PRINTLN              : 53
SEMICOLON            : 6 20 21 22 23 24 25 26 27 32 33
STRING               : 88
STRUCT               : 28 29 30 31
TIPOVAR              : 15 16 34 35
TRUE                 : 79
break                : 50
continue             : 
else                 : 41 46
elseif               : 45 46 47
error                : 
for                  : 
global               : 
if                   : 40 41 42
in                   : 
local                : 
return               : 49
while                : 48

Nonterminals, with rules where they appear

ATIBUTOSSTRUCT       : 28 30 32
ATRIBUTOSTRUCT       : 32 33
BREAK                : 25
DECLARACION          : 27
ELSEIF               : 43 44
IF                   : 23
LIST_ELSEIF          : 42 43 47
PARAMETRO            : 10 11
PARAMETROS           : 10 53 54 71 72
PARAMETROSTIPO       : 9 13
PARAMETROTIPO        : 13 14
RETURN               : 26
STRUCTGET            : 37 38
STRUCTGETS           : 37 52
STRUCTS              : 22
TIPO                 : 15 34 82
WHILE                : 24
call                 : 21 73
empty                : 2
expresion            : 12 40 41 42 45 46 47 48 49 51 52 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68
function             : 6
imprimir             : 20
init                 : 0
instruccion          : 7 18 19
instrucciones        : 8 9 18 40 41 41 42 45 46 46 47 48
script               : 4 5
scripts              : 1 4

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . scripts
    (2) init -> . empty
    (4) scripts -> . scripts script
    (5) scripts -> . script
    (3) empty -> .
    (6) script -> . function SEMICOLON
    (7) script -> . instruccion
    (8) function -> . FUNCION ID PARIZQ PARDER instrucciones FIN
    (9) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
    (20) instruccion -> . imprimir SEMICOLON
    (21) instruccion -> . call SEMICOLON
    (22) instruccion -> . STRUCTS SEMICOLON
    (23) instruccion -> . IF SEMICOLON
    (24) instruccion -> . WHILE SEMICOLON
    (25) instruccion -> . BREAK SEMICOLON
    (26) instruccion -> . RETURN SEMICOLON
    (27) instruccion -> . DECLARACION SEMICOLON
    (53) imprimir -> . PRINTLN PARIZQ PARAMETROS PARDER
    (54) imprimir -> . PRINT PARIZQ PARAMETROS PARDER
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (28) STRUCTS -> . MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
    (29) STRUCTS -> . MUTABLE STRUCT ID FIN
    (30) STRUCTS -> . STRUCT ID ATIBUTOSSTRUCT FIN
    (31) STRUCTS -> . STRUCT ID FIN
    (40) IF -> . if expresion instrucciones FIN
    (41) IF -> . if expresion instrucciones else instrucciones FIN
    (42) IF -> . if expresion instrucciones LIST_ELSEIF
    (48) WHILE -> . while expresion instrucciones FIN
    (50) BREAK -> . break
    (49) RETURN -> . return expresion
    (51) DECLARACION -> . ID IGUAL expresion
    (52) DECLARACION -> . STRUCTGETS IGUAL expresion
    (37) STRUCTGETS -> . STRUCTGETS DOT STRUCTGET
    (38) STRUCTGETS -> . STRUCTGET
    (39) STRUCTGET -> . ID

    $end            reduce using rule 3 (empty -> .)
    FUNCION         shift and go to state 7
    PRINTLN         shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 8
    MUTABLE         shift and go to state 19
    STRUCT          shift and go to state 20
    if              shift and go to state 21
    while           shift and go to state 22
    break           shift and go to state 23
    return          shift and go to state 24

    init                           shift and go to state 1
    scripts                        shift and go to state 2
    empty                          shift and go to state 3
    script                         shift and go to state 4
    function                       shift and go to state 5
    instruccion                    shift and go to state 6
    imprimir                       shift and go to state 9
    call                           shift and go to state 10
    STRUCTS                        shift and go to state 11
    IF                             shift and go to state 12
    WHILE                          shift and go to state 13
    BREAK                          shift and go to state 14
    RETURN                         shift and go to state 15
    DECLARACION                    shift and go to state 16
    STRUCTGETS                     shift and go to state 25
    STRUCTGET                      shift and go to state 26

state 1

    (0) S' -> init .



state 2

    (1) init -> scripts .
    (4) scripts -> scripts . script
    (6) script -> . function SEMICOLON
    (7) script -> . instruccion
    (8) function -> . FUNCION ID PARIZQ PARDER instrucciones FIN
    (9) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
    (20) instruccion -> . imprimir SEMICOLON
    (21) instruccion -> . call SEMICOLON
    (22) instruccion -> . STRUCTS SEMICOLON
    (23) instruccion -> . IF SEMICOLON
    (24) instruccion -> . WHILE SEMICOLON
    (25) instruccion -> . BREAK SEMICOLON
    (26) instruccion -> . RETURN SEMICOLON
    (27) instruccion -> . DECLARACION SEMICOLON
    (53) imprimir -> . PRINTLN PARIZQ PARAMETROS PARDER
    (54) imprimir -> . PRINT PARIZQ PARAMETROS PARDER
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (28) STRUCTS -> . MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
    (29) STRUCTS -> . MUTABLE STRUCT ID FIN
    (30) STRUCTS -> . STRUCT ID ATIBUTOSSTRUCT FIN
    (31) STRUCTS -> . STRUCT ID FIN
    (40) IF -> . if expresion instrucciones FIN
    (41) IF -> . if expresion instrucciones else instrucciones FIN
    (42) IF -> . if expresion instrucciones LIST_ELSEIF
    (48) WHILE -> . while expresion instrucciones FIN
    (50) BREAK -> . break
    (49) RETURN -> . return expresion
    (51) DECLARACION -> . ID IGUAL expresion
    (52) DECLARACION -> . STRUCTGETS IGUAL expresion
    (37) STRUCTGETS -> . STRUCTGETS DOT STRUCTGET
    (38) STRUCTGETS -> . STRUCTGET
    (39) STRUCTGET -> . ID

    $end            reduce using rule 1 (init -> scripts .)
    FUNCION         shift and go to state 7
    PRINTLN         shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 8
    MUTABLE         shift and go to state 19
    STRUCT          shift and go to state 20
    if              shift and go to state 21
    while           shift and go to state 22
    break           shift and go to state 23
    return          shift and go to state 24

    script                         shift and go to state 27
    function                       shift and go to state 5
    instruccion                    shift and go to state 6
    imprimir                       shift and go to state 9
    call                           shift and go to state 10
    STRUCTS                        shift and go to state 11
    IF                             shift and go to state 12
    WHILE                          shift and go to state 13
    BREAK                          shift and go to state 14
    RETURN                         shift and go to state 15
    DECLARACION                    shift and go to state 16
    STRUCTGETS                     shift and go to state 25
    STRUCTGET                      shift and go to state 26

state 3

    (2) init -> empty .

    $end            reduce using rule 2 (init -> empty .)


state 4

    (5) scripts -> script .

    FUNCION         reduce using rule 5 (scripts -> script .)
    PRINTLN         reduce using rule 5 (scripts -> script .)
    PRINT           reduce using rule 5 (scripts -> script .)
    ID              reduce using rule 5 (scripts -> script .)
    MUTABLE         reduce using rule 5 (scripts -> script .)
    STRUCT          reduce using rule 5 (scripts -> script .)
    if              reduce using rule 5 (scripts -> script .)
    while           reduce using rule 5 (scripts -> script .)
    break           reduce using rule 5 (scripts -> script .)
    return          reduce using rule 5 (scripts -> script .)
    $end            reduce using rule 5 (scripts -> script .)


state 5

    (6) script -> function . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (7) script -> instruccion .

    FUNCION         reduce using rule 7 (script -> instruccion .)
    PRINTLN         reduce using rule 7 (script -> instruccion .)
    PRINT           reduce using rule 7 (script -> instruccion .)
    ID              reduce using rule 7 (script -> instruccion .)
    MUTABLE         reduce using rule 7 (script -> instruccion .)
    STRUCT          reduce using rule 7 (script -> instruccion .)
    if              reduce using rule 7 (script -> instruccion .)
    while           reduce using rule 7 (script -> instruccion .)
    break           reduce using rule 7 (script -> instruccion .)
    return          reduce using rule 7 (script -> instruccion .)
    $end            reduce using rule 7 (script -> instruccion .)


state 7

    (8) function -> FUNCION . ID PARIZQ PARDER instrucciones FIN
    (9) function -> FUNCION . ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN

    ID              shift and go to state 29


state 8

    (69) call -> ID . PARIZQ PARDER
    (70) call -> ID . NOT PARIZQ PARDER
    (71) call -> ID . PARIZQ PARAMETROS PARDER
    (72) call -> ID . NOT PARIZQ PARAMETROS PARDER
    (51) DECLARACION -> ID . IGUAL expresion
    (39) STRUCTGET -> ID .

  ! shift/reduce conflict for IGUAL resolved as shift
    PARIZQ          shift and go to state 30
    NOT             shift and go to state 31
    IGUAL           shift and go to state 32
    DOT             reduce using rule 39 (STRUCTGET -> ID .)

  ! IGUAL           [ reduce using rule 39 (STRUCTGET -> ID .) ]


state 9

    (20) instruccion -> imprimir . SEMICOLON

    SEMICOLON       shift and go to state 33


state 10

    (21) instruccion -> call . SEMICOLON

    SEMICOLON       shift and go to state 34


state 11

    (22) instruccion -> STRUCTS . SEMICOLON

    SEMICOLON       shift and go to state 35


state 12

    (23) instruccion -> IF . SEMICOLON

    SEMICOLON       shift and go to state 36


state 13

    (24) instruccion -> WHILE . SEMICOLON

    SEMICOLON       shift and go to state 37


state 14

    (25) instruccion -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 38


state 15

    (26) instruccion -> RETURN . SEMICOLON

    SEMICOLON       shift and go to state 39


state 16

    (27) instruccion -> DECLARACION . SEMICOLON

    SEMICOLON       shift and go to state 40


state 17

    (53) imprimir -> PRINTLN . PARIZQ PARAMETROS PARDER

    PARIZQ          shift and go to state 41


state 18

    (54) imprimir -> PRINT . PARIZQ PARAMETROS PARDER

    PARIZQ          shift and go to state 42


state 19

    (28) STRUCTS -> MUTABLE . STRUCT ID ATIBUTOSSTRUCT FIN
    (29) STRUCTS -> MUTABLE . STRUCT ID FIN

    STRUCT          shift and go to state 43


state 20

    (30) STRUCTS -> STRUCT . ID ATIBUTOSSTRUCT FIN
    (31) STRUCTS -> STRUCT . ID FIN

    ID              shift and go to state 44


state 21

    (40) IF -> if . expresion instrucciones FIN
    (41) IF -> if . expresion instrucciones else instrucciones FIN
    (42) IF -> if . expresion instrucciones LIST_ELSEIF
    (55) expresion -> . expresion MAS expresion
    (56) expresion -> . expresion MENOS expresion
    (57) expresion -> . expresion POR expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MODULO expresion
    (61) expresion -> . expresion DOT expresion
    (62) expresion -> . expresion IGUALIGUAL expresion
    (63) expresion -> . expresion MAYORQ expresion
    (64) expresion -> . expresion MENORQ expresion
    (65) expresion -> . expresion MAYORIQ expresion
    (66) expresion -> . expresion MENORIQ expresion
    (67) expresion -> . expresion DIFERENTE expresion
    (68) expresion -> . PARIZQ expresion PARDER
    (73) expresion -> . call
    (74) expresion -> . ENTERO
    (75) expresion -> . DECIMAL
    (76) expresion -> . CADENA
    (77) expresion -> . CHARACTER
    (78) expresion -> . ID
    (79) expresion -> . TRUE
    (80) expresion -> . FALSE
    (81) expresion -> . NULO
    (82) expresion -> . TIPO
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (83) TIPO -> . INT64
    (84) TIPO -> . FLOAT64
    (85) TIPO -> . BOOL
    (86) TIPO -> . CHAR
    (87) TIPO -> . ID
    (88) TIPO -> . STRING

    PARIZQ          shift and go to state 46
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    CADENA          shift and go to state 50
    CHARACTER       shift and go to state 51
    ID              shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NULO            shift and go to state 55
    INT64           shift and go to state 57
    FLOAT64         shift and go to state 58
    BOOL            shift and go to state 59
    CHAR            shift and go to state 60
    STRING          shift and go to state 61

    expresion                      shift and go to state 45
    call                           shift and go to state 47
    TIPO                           shift and go to state 56

state 22

    (48) WHILE -> while . expresion instrucciones FIN
    (55) expresion -> . expresion MAS expresion
    (56) expresion -> . expresion MENOS expresion
    (57) expresion -> . expresion POR expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MODULO expresion
    (61) expresion -> . expresion DOT expresion
    (62) expresion -> . expresion IGUALIGUAL expresion
    (63) expresion -> . expresion MAYORQ expresion
    (64) expresion -> . expresion MENORQ expresion
    (65) expresion -> . expresion MAYORIQ expresion
    (66) expresion -> . expresion MENORIQ expresion
    (67) expresion -> . expresion DIFERENTE expresion
    (68) expresion -> . PARIZQ expresion PARDER
    (73) expresion -> . call
    (74) expresion -> . ENTERO
    (75) expresion -> . DECIMAL
    (76) expresion -> . CADENA
    (77) expresion -> . CHARACTER
    (78) expresion -> . ID
    (79) expresion -> . TRUE
    (80) expresion -> . FALSE
    (81) expresion -> . NULO
    (82) expresion -> . TIPO
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (83) TIPO -> . INT64
    (84) TIPO -> . FLOAT64
    (85) TIPO -> . BOOL
    (86) TIPO -> . CHAR
    (87) TIPO -> . ID
    (88) TIPO -> . STRING

    PARIZQ          shift and go to state 46
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    CADENA          shift and go to state 50
    CHARACTER       shift and go to state 51
    ID              shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NULO            shift and go to state 55
    INT64           shift and go to state 57
    FLOAT64         shift and go to state 58
    BOOL            shift and go to state 59
    CHAR            shift and go to state 60
    STRING          shift and go to state 61

    expresion                      shift and go to state 62
    call                           shift and go to state 47
    TIPO                           shift and go to state 56

state 23

    (50) BREAK -> break .

    SEMICOLON       reduce using rule 50 (BREAK -> break .)


state 24

    (49) RETURN -> return . expresion
    (55) expresion -> . expresion MAS expresion
    (56) expresion -> . expresion MENOS expresion
    (57) expresion -> . expresion POR expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MODULO expresion
    (61) expresion -> . expresion DOT expresion
    (62) expresion -> . expresion IGUALIGUAL expresion
    (63) expresion -> . expresion MAYORQ expresion
    (64) expresion -> . expresion MENORQ expresion
    (65) expresion -> . expresion MAYORIQ expresion
    (66) expresion -> . expresion MENORIQ expresion
    (67) expresion -> . expresion DIFERENTE expresion
    (68) expresion -> . PARIZQ expresion PARDER
    (73) expresion -> . call
    (74) expresion -> . ENTERO
    (75) expresion -> . DECIMAL
    (76) expresion -> . CADENA
    (77) expresion -> . CHARACTER
    (78) expresion -> . ID
    (79) expresion -> . TRUE
    (80) expresion -> . FALSE
    (81) expresion -> . NULO
    (82) expresion -> . TIPO
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (83) TIPO -> . INT64
    (84) TIPO -> . FLOAT64
    (85) TIPO -> . BOOL
    (86) TIPO -> . CHAR
    (87) TIPO -> . ID
    (88) TIPO -> . STRING

    PARIZQ          shift and go to state 46
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    CADENA          shift and go to state 50
    CHARACTER       shift and go to state 51
    ID              shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NULO            shift and go to state 55
    INT64           shift and go to state 57
    FLOAT64         shift and go to state 58
    BOOL            shift and go to state 59
    CHAR            shift and go to state 60
    STRING          shift and go to state 61

    expresion                      shift and go to state 63
    call                           shift and go to state 47
    TIPO                           shift and go to state 56

state 25

    (52) DECLARACION -> STRUCTGETS . IGUAL expresion
    (37) STRUCTGETS -> STRUCTGETS . DOT STRUCTGET

    IGUAL           shift and go to state 64
    DOT             shift and go to state 65


state 26

    (38) STRUCTGETS -> STRUCTGET .

    IGUAL           reduce using rule 38 (STRUCTGETS -> STRUCTGET .)
    DOT             reduce using rule 38 (STRUCTGETS -> STRUCTGET .)


state 27

    (4) scripts -> scripts script .

    FUNCION         reduce using rule 4 (scripts -> scripts script .)
    PRINTLN         reduce using rule 4 (scripts -> scripts script .)
    PRINT           reduce using rule 4 (scripts -> scripts script .)
    ID              reduce using rule 4 (scripts -> scripts script .)
    MUTABLE         reduce using rule 4 (scripts -> scripts script .)
    STRUCT          reduce using rule 4 (scripts -> scripts script .)
    if              reduce using rule 4 (scripts -> scripts script .)
    while           reduce using rule 4 (scripts -> scripts script .)
    break           reduce using rule 4 (scripts -> scripts script .)
    return          reduce using rule 4 (scripts -> scripts script .)
    $end            reduce using rule 4 (scripts -> scripts script .)


state 28

    (6) script -> function SEMICOLON .

    FUNCION         reduce using rule 6 (script -> function SEMICOLON .)
    PRINTLN         reduce using rule 6 (script -> function SEMICOLON .)
    PRINT           reduce using rule 6 (script -> function SEMICOLON .)
    ID              reduce using rule 6 (script -> function SEMICOLON .)
    MUTABLE         reduce using rule 6 (script -> function SEMICOLON .)
    STRUCT          reduce using rule 6 (script -> function SEMICOLON .)
    if              reduce using rule 6 (script -> function SEMICOLON .)
    while           reduce using rule 6 (script -> function SEMICOLON .)
    break           reduce using rule 6 (script -> function SEMICOLON .)
    return          reduce using rule 6 (script -> function SEMICOLON .)
    $end            reduce using rule 6 (script -> function SEMICOLON .)


state 29

    (8) function -> FUNCION ID . PARIZQ PARDER instrucciones FIN
    (9) function -> FUNCION ID . PARIZQ PARAMETROSTIPO PARDER instrucciones FIN

    PARIZQ          shift and go to state 66


state 30

    (69) call -> ID PARIZQ . PARDER
    (71) call -> ID PARIZQ . PARAMETROS PARDER
    (10) PARAMETROS -> . PARAMETROS COMMA PARAMETRO
    (11) PARAMETROS -> . PARAMETRO
    (12) PARAMETRO -> . expresion
    (55) expresion -> . expresion MAS expresion
    (56) expresion -> . expresion MENOS expresion
    (57) expresion -> . expresion POR expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MODULO expresion
    (61) expresion -> . expresion DOT expresion
    (62) expresion -> . expresion IGUALIGUAL expresion
    (63) expresion -> . expresion MAYORQ expresion
    (64) expresion -> . expresion MENORQ expresion
    (65) expresion -> . expresion MAYORIQ expresion
    (66) expresion -> . expresion MENORIQ expresion
    (67) expresion -> . expresion DIFERENTE expresion
    (68) expresion -> . PARIZQ expresion PARDER
    (73) expresion -> . call
    (74) expresion -> . ENTERO
    (75) expresion -> . DECIMAL
    (76) expresion -> . CADENA
    (77) expresion -> . CHARACTER
    (78) expresion -> . ID
    (79) expresion -> . TRUE
    (80) expresion -> . FALSE
    (81) expresion -> . NULO
    (82) expresion -> . TIPO
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (83) TIPO -> . INT64
    (84) TIPO -> . FLOAT64
    (85) TIPO -> . BOOL
    (86) TIPO -> . CHAR
    (87) TIPO -> . ID
    (88) TIPO -> . STRING

    PARDER          shift and go to state 67
    PARIZQ          shift and go to state 46
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    CADENA          shift and go to state 50
    CHARACTER       shift and go to state 51
    ID              shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NULO            shift and go to state 55
    INT64           shift and go to state 57
    FLOAT64         shift and go to state 58
    BOOL            shift and go to state 59
    CHAR            shift and go to state 60
    STRING          shift and go to state 61

    PARAMETROS                     shift and go to state 68
    PARAMETRO                      shift and go to state 69
    expresion                      shift and go to state 70
    call                           shift and go to state 47
    TIPO                           shift and go to state 56

state 31

    (70) call -> ID NOT . PARIZQ PARDER
    (72) call -> ID NOT . PARIZQ PARAMETROS PARDER

    PARIZQ          shift and go to state 71


state 32

    (51) DECLARACION -> ID IGUAL . expresion
    (55) expresion -> . expresion MAS expresion
    (56) expresion -> . expresion MENOS expresion
    (57) expresion -> . expresion POR expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MODULO expresion
    (61) expresion -> . expresion DOT expresion
    (62) expresion -> . expresion IGUALIGUAL expresion
    (63) expresion -> . expresion MAYORQ expresion
    (64) expresion -> . expresion MENORQ expresion
    (65) expresion -> . expresion MAYORIQ expresion
    (66) expresion -> . expresion MENORIQ expresion
    (67) expresion -> . expresion DIFERENTE expresion
    (68) expresion -> . PARIZQ expresion PARDER
    (73) expresion -> . call
    (74) expresion -> . ENTERO
    (75) expresion -> . DECIMAL
    (76) expresion -> . CADENA
    (77) expresion -> . CHARACTER
    (78) expresion -> . ID
    (79) expresion -> . TRUE
    (80) expresion -> . FALSE
    (81) expresion -> . NULO
    (82) expresion -> . TIPO
    (69) call -> . ID PARIZQ PARDER
    (70) call -> . ID NOT PARIZQ PARDER
    (71) call -> . ID PARIZQ PARAMETROS PARDER
    (72) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (83) TIPO -> . INT64
    (84) TIPO -> . FLOAT64
    (85) TIPO -> . BOOL
    (86) TIPO -> . CHAR
    (87) TIPO -> . ID
    (88) TIPO -> . STRING

    PARIZQ          shift and go to state 46
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    CADENA          shift and go to state 50
    CHARACTER       shift and go to state 51
    ID              shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NULO            shift and go to state 55
    INT64           shift and go to state 57
    FLOAT64         shift and go to state 58
    BOOL            shift and go to state 59
    CHAR            shift and go to state 60
    STRING          shift and go to state 61

    expresion                      shift and go to state 72
    call                           shift and go to state 47
    TIPO                           shift and go to state 56

state 33

    (20) instruccion -> imprimir SEMICOLON .

    FUNCION         reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    PRINTLN         reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    PRINT           reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    ID              reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    MUTABLE         reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    STRUCT          reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    if              reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    while           reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    break           reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    return          reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    $end            reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    FIN             reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    else            reduce using rule 20 (instruccion -> imprimir SEMICOLON .)
    elseif          reduce using rule 20 (instruccion -> imprimir SEMICOLON .)


state 34

    (21) instruccion -> call SEMICOLON .
